--- a/static/styles/global.css
+++ b/static/styles/global.css
@@ -41,6 +41,7 @@
 @import url("pages/error.css");
 @import url("pages/product.css");
 @import url("pages/legal.css");
+@import url("pages/who-we-are.css");
 
 /* Blocks */
 @import url("blocks/hero.css");
