--- a/static/styles/blocks/requirements.css
+++ b/static/styles/blocks/requirements.css
@@ -25,7 +25,7 @@
 /* Title */
 .requirements__title {
   font-size: 2.25rem;
-  font-weight: 700;
+  font-weight: 800;
   color: var(--color-gray-dark);
   text-align: center;
   margin-bottom: 60px;
@@ -45,13 +45,18 @@
 
 /* Timeline center line */
 .requirements__timeline::before {
-  content: '';
+  content: "";
   position: absolute;
   left: 50%;
   top: 0;
   bottom: 0;
   width: 2px;
-  background: linear-gradient(180deg, var(--color-border) 0%, var(--color-secondary) 50%, var(--color-border) 100%);
+  background: linear-gradient(
+    180deg,
+    var(--color-border) 0%,
+    var(--color-secondary) 50%,
+    var(--color-border) 100%
+  );
   transform: translateX(-50%);
 }
 
@@ -70,7 +75,7 @@
 
 /* Connector dot */
 .requirements__item::before {
-  content: '';
+  content: "";
   position: absolute;
   top: 50%;
   right: -6px;
@@ -89,7 +94,7 @@
 
 /* Connector line */
 .requirements__item::after {
-  content: '';
+  content: "";
   position: absolute;
   top: 50%;
   right: 6px;
