--- a/static/styles/components/modal.css
+++ b/static/styles/components/modal.css
@@ -52,7 +52,7 @@
 
 .modal__title {
   font-size: var(--text-xl);
-  font-weight: 700;
+  font-weight: 800;
   margin: 0;
   padding-right: var(--space-4);
 }
@@ -124,8 +124,12 @@
 }
 
 @keyframes modal-fade-in {
-  from { opacity: 0; }
-  to { opacity: 1; }
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 @keyframes modal-slide-in {
