--- a/static/styles/components/slider.css
+++ b/static/styles/components/slider.css
@@ -4,7 +4,8 @@
 
 /* Slider thumb pulse animation */
 @keyframes slider-pulse {
-  0%, 100% {
+  0%,
+  100% {
     transform: scale(1);
   }
   50% {
@@ -113,7 +114,7 @@
 
 /* Variants */
 .slider--secondary {
-  --track-color: #EBCE5B;
+  --track-color: #ebce5b;
 }
 
 .slider--investing {
@@ -129,7 +130,7 @@
   display: flex;
   justify-content: space-between;
   margin-top: var(--space-2);
-  font-weight: 700;
+  font-weight: 800;
   font-size: var(--text-xs);
   color: var(--color-gray-light);
   line-height: 2;
