--- a/static/styles/variables.css
+++ b/static/styles/variables.css
@@ -5,24 +5,24 @@
 :root {
   /* Primary Colors */
   --color-primary: #007399;
-  --color-secondary: #00B5CE;
-  --color-text: #1D2129;
-  --color-accent: #00D924;
+  --color-secondary: #00b5ce;
+  --color-text: #1d2129;
+  --color-accent: #00d924;
 
   /* Neutral Colors */
-  --color-text-light: #3F4E53;
+  --color-text-light: #3f4e53;
   --color-gray-dark: #424748;
   --color-gray: #929292;
-  --color-gray-light: #8E8F8F;
-  --color-silver: #C4C4C4;
+  --color-gray-light: #8e8f8f;
+  --color-silver: #c4c4c4;
   --color-white: #fff;
-  --color-border: #E5E5E5;
-  --color-bg-light: #F5F5F5;
-  --color-bg-section: #F9FAFB;
+  --color-border: #e5e5e5;
+  --color-bg-light: #f5f5f5;
+  --color-bg-section: #f9fafb;
 
   /* Service Colors */
-  --color-borrowing: #21CFE0;
-  --color-investing: #23C343;
+  --color-borrowing: #21cfe0;
+  --color-investing: #23c343;
 
   /* Container theming */
   --container-primary-color: var(--color-primary);
@@ -30,7 +30,7 @@
 
   /* Slider track */
   --track-color: #007399;
-  --track-color-bg: #DFF6F9;
+  --track-color-bg: #dff6f9;
 
   /* Status */
   --color-error: #dc2626;
